posiGen_FullsendBox/src/objects/Planned_Arrays__c.object
<CustomObject>
    <fields>
        <fullName>Array_Rating_for_Rollup_kW__c</fullName>
        <inlineHelpText>This is used to store the array rating in a manner that it can be rolled up to the Project Level to get a system rating.</inlineHelpText>
        <label>Array Rating for Rollup (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Rating_kW__c</fullName>
        <formula>Number_of_Modules__c *  Module_Rating__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Array Rating (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Rating__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Rating (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Modules__c</fullName>
        <label># of Modules</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>CASESAFEID( Project__r.Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Planned Arrays</relationshipLabel>
        <relationshipName>Planned_Arrays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TSRF__c</fullName>
        <label>TSRF</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <label>Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yeild_kWh_yr__c</fullName>
        <label>Yeild (kWh/yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Planned Array</label>
    <nameField>
        <label>Planned Arrays Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Arrays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>